(library
 (name rcclient)
 (public_name rcclient)
 (libraries core async ocaml-protoc ppx_log ocplib-endian)
 (preprocess
  (pps ppx_jane ppx_log)))

(rule
 (targets message_types.ml message_types.mli message_pb.ml message_pb.mli)
 (deps message.proto)
 (action
  (run ocaml-protoc -binary -pp -ml_out ./ %{deps})))
